--- a/hollysome/Resources/Commons.storyboard
+++ b/hollysome/Resources/Commons.storyboard
@@ -740,6 +740,9 @@
                                 <state key="normal" title="선택완료">
                                     <color key="titleColor" name="FFFFFF"/>
                                 </state>
+                                <connections>
+                                    <action selector="finishButtonTouchedWithSender:" destination="jqF-uX-kCI" eventType="touchUpInside" id="Om1-g6-JNg"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LJ2-I9-Tvy">
                                 <rect key="frame" x="137" y="123" width="119" height="119"/>
