--- a/hollysome/Resources/Login.storyboard
+++ b/hollysome/Resources/Login.storyboard
@@ -26,32 +26,32 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vRS-t1-Fci">
-                                <rect key="frame" x="0.0" y="117" width="414" height="26.5"/>
+                                <rect key="frame" x="0.0" y="117" width="414" height="17.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login-artwork" translatesAutoresizingMaskIntoConstraints="NO" id="DO2-xg-oVh">
-                                <rect key="frame" x="47" y="143.5" width="320" height="177.5"/>
+                                <rect key="frame" x="47" y="134.5" width="320" height="177.5"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x9V-jN-Qa9">
-                                <rect key="frame" x="20" y="348" width="374" height="57.5"/>
+                                <rect key="frame" x="20" y="330" width="374" height="53"/>
                                 <string key="text">클래스 메이트와
 우리집 일정을 공유해요</string>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                 <color key="textColor" name="3A3A3C"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9jZ-6q-VwA">
-                                <rect key="frame" x="0.0" y="321" width="414" height="27"/>
+                                <rect key="frame" x="0.0" y="312" width="414" height="18"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="우리집 일정 관리 어플, 눔메이트" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ekQ-fX-43m">
-                                <rect key="frame" x="20" y="417.5" width="374" height="19.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <rect key="frame" x="20" y="395" width="374" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" name="6E7583"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oJ0-Tv-ETE">
-                                <rect key="frame" x="116" y="721.5" width="50" height="50"/>
+                                <rect key="frame" x="116" y="697.5" width="50" height="50"/>
                                 <color key="backgroundColor" name="naver"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="A44-Co-EQg"/>
@@ -67,7 +67,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eZ3-GB-H7V">
-                                <rect key="frame" x="182" y="721.5" width="50" height="50"/>
+                                <rect key="frame" x="182" y="697.5" width="50" height="50"/>
                                 <color key="backgroundColor" name="kakao"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="dJO-Zp-TFL"/>
@@ -83,7 +83,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lmT-KT-rUG">
-                                <rect key="frame" x="206.5" y="677" width="1" height="14"/>
+                                <rect key="frame" x="206.5" y="653" width="1" height="14"/>
                                 <color key="backgroundColor" name="C8CCD5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="1" id="gIT-Jn-4PF"/>
@@ -91,7 +91,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xgw-7L-dbY">
-                                <rect key="frame" x="207.5" y="666.5" width="60" height="35"/>
+                                <rect key="frame" x="207.5" y="642.5" width="60" height="35"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <inset key="contentEdgeInsets" minX="8" minY="10" maxX="10" maxY="10"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -103,7 +103,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q0P-bz-iQd">
-                                <rect key="frame" x="122.5" y="666.5" width="84" height="35"/>
+                                <rect key="frame" x="122.5" y="642.5" width="84" height="35"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <inset key="contentEdgeInsets" minX="10" minY="10" maxX="8" maxY="10"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -115,7 +115,10 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="이메일" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DYN-jU-EQY">
-                                <rect key="frame" x="16" y="467" width="382" height="50"/>
+                                <rect key="frame" x="16" y="443" width="382" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="yHC-Gf-9b0"/>
+                                </constraints>
                                 <color key="textColor" name="text"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
@@ -126,7 +129,10 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="비밀번호" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="riO-hU-YbJ">
-                                <rect key="frame" x="16" y="533" width="382" height="50"/>
+                                <rect key="frame" x="16" y="509" width="382" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="bUp-Ac-CqH"/>
+                                </constraints>
                                 <color key="textColor" name="text"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
@@ -137,7 +143,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RmT-gE-4Mh">
-                                <rect key="frame" x="248" y="721.5" width="50" height="50"/>
+                                <rect key="frame" x="248" y="697.5" width="50" height="50"/>
                                 <color key="backgroundColor" name="apple"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="AQ9-yA-W8s"/>
@@ -153,7 +159,10 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="34Z-Qa-EwE">
-                                <rect key="frame" x="16" y="607" width="382" height="50"/>
+                                <rect key="frame" x="16" y="583" width="382" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="HzE-rU-5tG"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" title="로그인">
@@ -203,7 +212,7 @@
                             <constraint firstItem="HPq-pA-gXq" firstAttribute="trailing" secondItem="x9V-jN-Qa9" secondAttribute="trailing" constant="20" id="kCx-cY-RxD"/>
                             <constraint firstItem="riO-hU-YbJ" firstAttribute="leading" secondItem="UpB-1f-KcV" secondAttribute="leading" constant="16" id="lzC-Ac-mho"/>
                             <constraint firstItem="jkb-QD-VVd" firstAttribute="top" secondItem="L3B-Ug-cxG" secondAttribute="bottom" id="oLC-Et-4Ru"/>
-                            <constraint firstItem="vRS-t1-Fci" firstAttribute="height" secondItem="UpB-1f-KcV" secondAttribute="height" multiplier="0.03" id="ocf-xl-kfB"/>
+                            <constraint firstItem="vRS-t1-Fci" firstAttribute="height" secondItem="UpB-1f-KcV" secondAttribute="height" multiplier="0.02" id="ocf-xl-kfB"/>
                             <constraint firstItem="HPq-pA-gXq" firstAttribute="trailing" secondItem="riO-hU-YbJ" secondAttribute="trailing" constant="16" id="pnT-w0-xib"/>
                             <constraint firstItem="L3B-Ug-cxG" firstAttribute="leading" secondItem="HPq-pA-gXq" secondAttribute="leading" id="qMp-pP-qQd"/>
                             <constraint firstItem="ekQ-fX-43m" firstAttribute="top" secondItem="x9V-jN-Qa9" secondAttribute="bottom" constant="12" id="qhX-1S-DmT"/>
@@ -212,7 +221,6 @@
                             <constraint firstItem="lmT-KT-rUG" firstAttribute="top" secondItem="34Z-Qa-EwE" secondAttribute="bottom" constant="20" id="v7r-YA-SJ2"/>
                             <constraint firstItem="L3B-Ug-cxG" firstAttribute="height" secondItem="UpB-1f-KcV" secondAttribute="height" multiplier="0.05" id="x54-eg-6iX"/>
                             <constraint firstItem="HPq-pA-gXq" firstAttribute="trailing" secondItem="vRS-t1-Fci" secondAttribute="trailing" id="xa6-Vn-PLi"/>
-                            <constraint firstItem="DYN-jU-EQY" firstAttribute="height" secondItem="UpB-1f-KcV" secondAttribute="height" multiplier="0.0558" id="xzj-Y7-Wl7"/>
                             <constraint firstAttribute="trailing" secondItem="9jZ-6q-VwA" secondAttribute="trailing" id="y7M-fL-gbF"/>
                         </constraints>
                     </view>
