--- a/hollysome/Resources/Commons.storyboard
+++ b/hollysome/Resources/Commons.storyboard
@@ -57,65 +57,85 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="UVE-S7-0Jx">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E8f-jS-BdT">
                                 <rect key="frame" x="0.0" y="103" width="393" height="715"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <view key="tableHeaderView" contentMode="scaleToFill" id="Skz-2H-dAP">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="94"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="공지사항 제목" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kqX-U7-gcL">
-                                            <rect key="frame" x="20" y="20" width="353" height="18"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="공지사항 날짜" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hw4-5K-xrR">
-                                            <rect key="frame" x="20" y="42" width="353" height="16"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                            <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4qG-lZ-dUa">
-                                            <rect key="frame" x="0.0" y="93" width="393" height="1"/>
-                                            <color key="backgroundColor" name="CCCCCC"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="1" id="dEA-SL-Qck"/>
-                                            </constraints>
-                                        </view>
-                                    </subviews>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    <constraints>
-                                        <constraint firstItem="Hw4-5K-xrR" firstAttribute="top" secondItem="kqX-U7-gcL" secondAttribute="bottom" constant="4" id="0D4-Gs-aLK"/>
-                                        <constraint firstItem="kqX-U7-gcL" firstAttribute="leading" secondItem="Skz-2H-dAP" secondAttribute="leading" constant="20" id="3UP-dv-90A"/>
-                                        <constraint firstItem="Hw4-5K-xrR" firstAttribute="leading" secondItem="Skz-2H-dAP" secondAttribute="leading" constant="20" id="BCZ-yh-pNU"/>
-                                        <constraint firstAttribute="trailing" secondItem="Hw4-5K-xrR" secondAttribute="trailing" constant="20" id="IAR-mg-hte"/>
-                                        <constraint firstAttribute="trailing" secondItem="kqX-U7-gcL" secondAttribute="trailing" constant="20" id="Nn0-Nq-i8E"/>
-                                        <constraint firstAttribute="bottom" secondItem="4qG-lZ-dUa" secondAttribute="bottom" id="doK-lU-st3"/>
-                                        <constraint firstItem="4qG-lZ-dUa" firstAttribute="leading" secondItem="Skz-2H-dAP" secondAttribute="leading" id="tnc-RE-8ht"/>
-                                        <constraint firstAttribute="trailing" secondItem="4qG-lZ-dUa" secondAttribute="trailing" id="yEU-CY-EfX"/>
-                                        <constraint firstItem="kqX-U7-gcL" firstAttribute="top" secondItem="Skz-2H-dAP" secondAttribute="top" constant="20" id="zPY-Xz-D9P"/>
-                                    </constraints>
-                                </view>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="fqW-9Q-mw1">
-                                        <rect key="frame" x="0.0" y="149.33333206176758" width="393" height="45"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fqW-9Q-mw1" id="lUn-hl-8hz">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="45"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3mp-Vg-Ilu">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="277.66666666666669"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wGb-8S-ip4">
+                                                <rect key="frame" x="16" y="24" width="361" height="19.333333333333329"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                                <color key="textColor" name="3A3A3C"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zcj-Py-gRc">
+                                                <rect key="frame" x="16" y="51.333333333333343" width="361" height="14.333333333333329"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                <color key="textColor" name="C8CCD5"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yQC-tI-9ng">
+                                                <rect key="frame" x="16" y="81.666666666666657" width="361" height="1"/>
+                                                <color key="backgroundColor" name="F1F1F4"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="1" id="Oo5-dO-5lY"/>
+                                                </constraints>
+                                            </view>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="JxB-LT-Tjh">
+                                                <rect key="frame" x="16" y="106.66666666666666" width="361" height="141"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="I8y-Yd-wkF">
+                                                        <rect key="frame" x="0.0" y="0.0" width="361" height="100"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="100" id="lLI-lb-Y8p"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="content" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eb3-2I-eQQ">
+                                                        <rect key="frame" x="0.0" y="124.00000000000003" width="361" height="17"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <color key="textColor" name="3A3A3C"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="wGb-8S-ip4" firstAttribute="leading" secondItem="3mp-Vg-Ilu" secondAttribute="leading" constant="16" id="1yI-zw-iIM"/>
+                                            <constraint firstItem="wGb-8S-ip4" firstAttribute="top" secondItem="3mp-Vg-Ilu" secondAttribute="top" constant="24" id="3Zd-kb-I5T"/>
+                                            <constraint firstItem="JxB-LT-Tjh" firstAttribute="leading" secondItem="3mp-Vg-Ilu" secondAttribute="leading" constant="16" id="5ZX-ZP-9Bx"/>
+                                            <constraint firstAttribute="bottom" secondItem="JxB-LT-Tjh" secondAttribute="bottom" constant="30" id="DSq-A1-EOi"/>
+                                            <constraint firstAttribute="trailing" secondItem="Zcj-Py-gRc" secondAttribute="trailing" constant="16" id="EKi-QS-0HH"/>
+                                            <constraint firstItem="yQC-tI-9ng" firstAttribute="leading" secondItem="3mp-Vg-Ilu" secondAttribute="leading" constant="16" id="G9X-at-TQW"/>
+                                            <constraint firstItem="Zcj-Py-gRc" firstAttribute="top" secondItem="wGb-8S-ip4" secondAttribute="bottom" constant="8" id="K8o-5c-7XO"/>
+                                            <constraint firstItem="yQC-tI-9ng" firstAttribute="top" secondItem="Zcj-Py-gRc" secondAttribute="bottom" constant="16" id="cnQ-ya-kbz"/>
+                                            <constraint firstItem="JxB-LT-Tjh" firstAttribute="top" secondItem="yQC-tI-9ng" secondAttribute="bottom" constant="24" id="lxN-rd-SHg"/>
+                                            <constraint firstItem="Zcj-Py-gRc" firstAttribute="leading" secondItem="3mp-Vg-Ilu" secondAttribute="leading" constant="16" id="pXh-AU-Wpu"/>
+                                            <constraint firstAttribute="trailing" secondItem="wGb-8S-ip4" secondAttribute="trailing" constant="16" id="wJe-d4-XbS"/>
+                                            <constraint firstAttribute="trailing" secondItem="yQC-tI-9ng" secondAttribute="trailing" constant="16" id="wgr-5s-igD"/>
+                                            <constraint firstAttribute="trailing" secondItem="JxB-LT-Tjh" secondAttribute="trailing" constant="16" id="yzT-Uy-W88"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="3mp-Vg-Ilu" firstAttribute="trailing" secondItem="bBW-78-KjS" secondAttribute="trailing" id="Asx-18-Hys"/>
+                                    <constraint firstItem="3mp-Vg-Ilu" firstAttribute="leading" secondItem="bBW-78-KjS" secondAttribute="leading" id="bQd-8N-UmI"/>
+                                    <constraint firstItem="3mp-Vg-Ilu" firstAttribute="width" secondItem="YSe-Yc-bwm" secondAttribute="width" id="dvV-EQ-owz"/>
+                                    <constraint firstItem="3mp-Vg-Ilu" firstAttribute="bottom" secondItem="bBW-78-KjS" secondAttribute="bottom" id="g4O-kX-szV"/>
+                                    <constraint firstItem="3mp-Vg-Ilu" firstAttribute="top" secondItem="bBW-78-KjS" secondAttribute="top" id="ro4-qr-qeg"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="bBW-78-KjS"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="YSe-Yc-bwm"/>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="0cb-KQ-n3i"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="0cb-KQ-n3i" firstAttribute="trailing" secondItem="UVE-S7-0Jx" secondAttribute="trailing" id="4dl-P7-eLc"/>
-                            <constraint firstItem="0cb-KQ-n3i" firstAttribute="bottom" secondItem="UVE-S7-0Jx" secondAttribute="bottom" id="Hyb-LG-hyZ"/>
-                            <constraint firstItem="UVE-S7-0Jx" firstAttribute="top" secondItem="0cb-KQ-n3i" secondAttribute="top" id="Vpf-ol-nCG"/>
-                            <constraint firstItem="UVE-S7-0Jx" firstAttribute="leading" secondItem="0cb-KQ-n3i" secondAttribute="leading" id="bgA-PO-eC5"/>
+                            <constraint firstItem="E8f-jS-BdT" firstAttribute="leading" secondItem="0cb-KQ-n3i" secondAttribute="leading" id="7Bu-TY-H2A"/>
+                            <constraint firstItem="0cb-KQ-n3i" firstAttribute="bottom" secondItem="E8f-jS-BdT" secondAttribute="bottom" id="NDx-hV-BJU"/>
+                            <constraint firstItem="E8f-jS-BdT" firstAttribute="top" secondItem="0cb-KQ-n3i" secondAttribute="top" id="aZF-Vk-pyu"/>
+                            <constraint firstItem="0cb-KQ-n3i" firstAttribute="trailing" secondItem="E8f-jS-BdT" secondAttribute="trailing" id="yS4-nC-ak1"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="공지사항" id="wQ3-Uq-T1T">
@@ -127,9 +147,11 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="dateLabel" destination="Hw4-5K-xrR" id="1xM-p1-OQd"/>
-                        <outlet property="imageTableView" destination="UVE-S7-0Jx" id="jjj-ey-PaA"/>
-                        <outlet property="titleLabel" destination="kqX-U7-gcL" id="iB5-Wg-Bei"/>
+                        <outlet property="contentLabel" destination="eb3-2I-eQQ" id="RL0-fy-M6M"/>
+                        <outlet property="dateLabel" destination="Zcj-Py-gRc" id="dEW-9E-0PI"/>
+                        <outlet property="imageHeight" destination="lLI-lb-Y8p" id="EKj-Id-fdH"/>
+                        <outlet property="imageView" destination="I8y-Yd-wkF" id="cPT-4X-3fc"/>
+                        <outlet property="titleLabel" destination="wGb-8S-ip4" id="qGj-GK-lqa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pVa-rS-0Ty" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -979,11 +1001,17 @@
         <namedColor name="999999">
             <color red="0.60000002384185791" green="0.60000002384185791" blue="0.60000002384185791" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="C8CCD5">
+            <color red="0.7839999794960022" green="0.80000001192092896" blue="0.83499997854232788" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="CCCCCC">
             <color red="0.80000001192092896" green="0.80000001192092896" blue="0.80000001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="E1F5FE">
             <color red="0.88200002908706665" green="0.96100002527236938" blue="0.99599999189376831" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="F1F1F4">
+            <color red="0.94499999284744263" green="0.94499999284744263" blue="0.9570000171661377" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="FC5A5D">
             <color red="0.98799997568130493" green="0.3529999852180481" blue="0.36500000953674316" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
