--- a/hollysome/Views/Home/MateCell.xib
+++ b/hollysome/Views/Home/MateCell.xib
@@ -44,12 +44,19 @@
                                     <constraint firstAttribute="bottom" secondItem="AiO-jl-Dii" secondAttribute="bottom" id="yHU-CA-rTf"/>
                                 </constraints>
                             </view>
+                            <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="select" translatesAutoresizingMaskIntoConstraints="NO" id="AgN-Hc-0Gv">
+                                <rect key="frame" x="0.0" y="0.0" width="52" height="52"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" name="F1F1F4"/>
                         <constraints>
+                            <constraint firstItem="AgN-Hc-0Gv" firstAttribute="top" secondItem="a8c-r3-v0R" secondAttribute="top" id="DdF-QP-rgG"/>
+                            <constraint firstAttribute="bottom" secondItem="AgN-Hc-0Gv" secondAttribute="bottom" id="GYR-jg-SDQ"/>
                             <constraint firstAttribute="height" constant="52" id="PBN-2Z-wDv"/>
                             <constraint firstItem="X0L-5p-Wxn" firstAttribute="leading" secondItem="a8c-r3-v0R" secondAttribute="leading" constant="5" id="UPR-Pz-KVR"/>
                             <constraint firstAttribute="trailing" secondItem="X0L-5p-Wxn" secondAttribute="trailing" constant="5" id="Xvv-dy-tBQ"/>
+                            <constraint firstItem="AgN-Hc-0Gv" firstAttribute="leading" secondItem="a8c-r3-v0R" secondAttribute="leading" id="ZXp-6K-Cvj"/>
+                            <constraint firstAttribute="trailing" secondItem="AgN-Hc-0Gv" secondAttribute="trailing" id="at4-qS-ZWf"/>
                             <constraint firstAttribute="width" constant="52" id="etF-1F-f0z"/>
                             <constraint firstItem="X0L-5p-Wxn" firstAttribute="top" secondItem="a8c-r3-v0R" secondAttribute="top" constant="5" id="k8R-7I-5uz"/>
                             <constraint firstAttribute="bottom" secondItem="X0L-5p-Wxn" secondAttribute="bottom" constant="5" id="yGW-Io-m7T"/>
@@ -80,6 +87,7 @@
                 <outlet property="colorView" destination="X0L-5p-Wxn" id="3E3-gL-D0b"/>
                 <outlet property="faceImageView" destination="Xya-tx-9Hy" id="e4t-Fi-87R"/>
                 <outlet property="nameLabel" destination="LVt-XQ-zqt" id="cD6-Fz-rTF"/>
+                <outlet property="selectImageView" destination="AgN-Hc-0Gv" id="gbd-FM-TOG"/>
                 <outlet property="shapeImageView" destination="AiO-jl-Dii" id="9QU-Va-vks"/>
             </connections>
             <point key="canvasLocation" x="116.79389312977099" y="-146.83098591549296"/>
@@ -87,6 +95,7 @@
     </objects>
     <resources>
         <image name="round71" width="71" height="71"/>
+        <image name="select" width="52" height="52"/>
         <namedColor name="F1F1F4">
             <color red="0.94499999284744263" green="0.94499999284744263" blue="0.9570000171661377" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
