--- a/hollysome/Views/Main/AlarmCell.xib
+++ b/hollysome/Views/Main/AlarmCell.xib
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="AlarmCell" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AlarmCell" rowHeight="77" id="Udp-CO-cnI" customClass="AlarmCell" customModule="RocateerKit" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="AlarmCell" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AlarmCell" rowHeight="77" id="Udp-CO-cnI" customClass="AlarmCell" customModule="hollysome" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="77"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Udp-CO-cnI" id="5ZA-mC-jKA">
@@ -18,28 +18,36 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림 내용" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xd5-CO-zbD">
-                        <rect key="frame" x="20" y="20" width="374" height="21"/>
+                        <rect key="frame" x="16" y="20" width="363" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="GcM-BN-5OV"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" name="3A3A3C"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림 날짜" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k9B-q9-3Hu">
-                        <rect key="frame" x="20" y="46" width="374" height="11"/>
+                        <rect key="frame" x="16" y="46" width="378" height="11"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" name="999999"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Di-bJ-zDI">
+                        <rect key="frame" x="368" y="11.5" width="46" height="54"/>
+                        <inset key="contentEdgeInsets" minX="16" minY="16" maxX="16" maxY="16"/>
+                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                        <state key="normal" image="close"/>
+                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Xd5-CO-zbD" firstAttribute="leading" secondItem="5ZA-mC-jKA" secondAttribute="leading" constant="20" id="0jE-XA-ssQ"/>
+                    <constraint firstItem="Xd5-CO-zbD" firstAttribute="leading" secondItem="5ZA-mC-jKA" secondAttribute="leading" constant="16" id="0jE-XA-ssQ"/>
+                    <constraint firstItem="6Di-bJ-zDI" firstAttribute="centerY" secondItem="5ZA-mC-jKA" secondAttribute="centerY" id="6dt-SQ-mm2"/>
                     <constraint firstItem="Xd5-CO-zbD" firstAttribute="top" secondItem="5ZA-mC-jKA" secondAttribute="top" constant="20" id="AIc-p6-aDA"/>
-                    <constraint firstAttribute="trailing" secondItem="Xd5-CO-zbD" secondAttribute="trailing" constant="20" id="IWD-mN-mEb"/>
+                    <constraint firstAttribute="trailing" secondItem="6Di-bJ-zDI" secondAttribute="trailing" id="F0q-sV-Ss8"/>
+                    <constraint firstAttribute="trailing" secondItem="Xd5-CO-zbD" secondAttribute="trailing" constant="35" id="IWD-mN-mEb"/>
                     <constraint firstAttribute="bottom" secondItem="k9B-q9-3Hu" secondAttribute="bottom" constant="20" id="QYZ-5f-dJS"/>
                     <constraint firstItem="k9B-q9-3Hu" firstAttribute="top" secondItem="Xd5-CO-zbD" secondAttribute="bottom" constant="5" id="aEa-LP-vZI"/>
-                    <constraint firstItem="k9B-q9-3Hu" firstAttribute="leading" secondItem="5ZA-mC-jKA" secondAttribute="leading" constant="20" id="br6-TD-MGR"/>
+                    <constraint firstItem="k9B-q9-3Hu" firstAttribute="leading" secondItem="5ZA-mC-jKA" secondAttribute="leading" constant="16" id="br6-TD-MGR"/>
                     <constraint firstAttribute="trailing" secondItem="k9B-q9-3Hu" secondAttribute="trailing" constant="20" id="yX3-Xr-INn"/>
                 </constraints>
             </tableViewCellContentView>
@@ -51,6 +59,10 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="close" width="14" height="14.5"/>
+        <namedColor name="3A3A3C">
+            <color red="0.22699999809265137" green="0.22699999809265137" blue="0.23499999940395355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="999999">
             <color red="0.60000002384185791" green="0.60000002384185791" blue="0.60000002384185791" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
